fixes to breadcrumb spacing

--- a/scss/bootstrap-overrides/_breadcrumb.scss
+++ b/scss/bootstrap-overrides/_breadcrumb.scss
@@ -2,7 +2,7 @@
 .breadcrumb {
   display: flex;
   flex-wrap: wrap;
-  padding: $breadcrumb-padding-y 1rem $breadcrumb-padding-y 0;
+  padding: 0;
   margin-bottom: $breadcrumb-margin-bottom;
   @include font-size($breadcrumb-font-size);
   list-style: none;
