--- a/scss/illinois-framework/_block.illinois-framework-theme-breadcrumbs.scss
+++ b/scss/illinois-framework/_block.illinois-framework-theme-breadcrumbs.scss
@@ -10,7 +10,7 @@
     line-height: 1;
 
     li.breadcrumb-item {
-      height: rem(20px);
+      height: rem(30px);
     }
     li.breadcrumb-item + .breadcrumb-item::before {
       content: '>';
